# bms-monitor

./: .gitignore  bezel.skp  saddle.skp
avr/: Makefile  bms.c  bms.h  display.c  display.h  main.c  usart.h  usart_config.h
nextion/: bms-display.hmi  ubuntu16l.zi  ubuntu24.zi  ubuntu24l.zi  ubuntu32.zi  ubuntu32l.zi  ubuntu48.zi  ubuntu48l.zi  ubuntu56.zi  ubuntu56l.zi
pico/: BMSDisplay.cpp  BMSDisplay.h  CMakeLists.txt  Nextion.cpp  Nextion.h  SmartBMS.cpp  SmartBMS.h  bms-monitor.cpp
